# nonstop_robots

./: CMakeLists.txt  package.xml
coldeyes/coldeyes_bringup/: CMakeLists.txt  package.xml
coldeyes/coldeyes_bringup/calibration/: logitech_640_480.yaml
coldeyes/coldeyes_bringup/launch/: bootstrap.launch  bootstrap_standalone.launch
coldeyes/coldeyes_description/: CMakeLists.txt  package.xml
coldeyes/coldeyes_description/robots/: coldeyes.urdf.xacro  coldeyes_marker.urdf.xacro
coldeyes/coldeyes_description/urdf/: coldeyes.urdf  coldeyes_library.urdf.xacro
coldeyes/coldeyes_node/: CMakeLists.txt  package.xml
coldeyes/coldeyes_node/param/: base.yaml
coldeyes/coldeyes_node/plugins/: nodelet_plugins.xml
coldeyes/coldeyes_rapps/: CMakeLists.txt  package.xml
coldeyes/coldeyes_rapps/rapps/: coldeyes.rapps
guyomi_firmware/: guyomi.ino
handheld_mappper/handheld_mapper_bringup/: CMakeLists.txt  package.xml
handheld_mappper/handheld_mapper_bringup/launch/: bootstrap_standalone.launch  bringup.launch  mapping_test.launch  minimal.launch
handheld_mappper/handheld_mapper_description/: CMakeLists.txt  package.xml
handheld_mappper/handheld_mapper_description/meshes/: hokuyo.dae
handheld_mappper/handheld_mapper_driver/: CMakeLists.txt  package.xml
handheld_mappper/handheld_mapper_ftdi/: CMakeLists.txt  package.xml
lemona_robot/lemona_driver/: CMakeLists.txt  package.xml
lemonabot/lemonabot_2dnav/: CMakeLists.txt  package.xml
lemonabot/lemonabot_bringup/: CMakeLists.txt  package.xml
lemonabot/lemonabot_description/: CMakeLists.txt  package.xml
lemonabot/lemonabot_drivers/: CMakeLists.txt  package.xml
lemonabot/lemonabot_teleop/: CMakeLists.txt  package.xml
mapper/: CMakeLists.txt  package.xml
mapper/launch/: mapper.launch
nonstop_drone/nonstop_drone_marker_tracking/: CMakeLists.txt  package.xml
nonstop_drone/nonstop_drone_node/: CMakeLists.txt  package.xml
nonstop_drone/nonstop_drone_teleop/: CMakeLists.txt  package.xml
robot_arm/robot_arm_teleop/: CMakeLists.txt  package.xml
sniperbot/: CMakeLists.txt  package.xml
sniperbot/include/sniperbot/: common.hpp
sniperbot/launch/: sniperbot.launch  sniperbot_demo.launch  sniperbot_sim.launch  sniperbot_viz.launch
sniperbot/launch/includes/: _master_ctrl.launch  _move_base.launch  _move_base_eband.launch  _safety_ctrl.launch
sniperbot/param/move_base/: base_local_planner_params.yaml
sniperbot/sniperbot/: CMakeLists.txt
sniperbot/sniperbot/include/sniperbot/: ar_markers.hpp  nav_watchdog.hpp  navigator.hpp  sniper_node.hpp
sniperbot/sniperbot/launch/: sniperbot.launch
sniperbot/sniperbot/launch/includes/: _master_ctrl.launch  _move_base_eband.launch
sniperbot/sniperbot/src/: navigator.cpp  sniper_callbacks.cpp  sniper_node.cpp  sniper_shot_handles.cpp  sniper_tasks.cpp
sniperbot/sniperbot_bringup/: CMakeLists.txt  package.xml
sniperbot/sniperbot_bringup/launch/: sniperbot_demo.launch
sniperbot/sniperbot_description/: CMakeLists.txt  package.xml
sniperbot/sniperbot_description/urdf/: sniperbot_library.urdf.xacro
sniperbot/sniperbot_description/urdf/marker_bundle/: marker_bundle.urdf.xacro
sniperbot/sniperbot_node/: CMakeLists.txt  package.xml
sniperbot/sniperbot_node/include/sniperbot/: navigator.hpp  sniper_node.hpp
sniperbot/sniperbot_node/src/: ar_markers.cpp  sniper_node.cpp  sniper_tasks.cpp
sniperbot/sniperbot_rapps/: CMakeLists.txt  package.xml
sniperbot/sniperbot_rapps/rapps/: sniperbot.rapps  sniperbot.rapps~
sniperbot/sniperbot_rapps/rapps/sniperbot/: sniperbot.rapp
sniperbot/src/: common.cpp  nav_watchdog.cpp  navigator.cpp  sniper_callbacks.cpp  sniper_delivery_handles.cpp  sniper_node.cpp  sniper_tasks.cpp
turtlebot_nonstop/turtlebot_nonstop_bringup/: CMakeLists.txt  package.xml
turtlebot_nonstop/turtlebot_nonstop_bringup/launch/: 3dsensor.launch  minimal.launch  minimal_with_appmanager.launch  paired_public.launch  turtlebot_nonstop_demo.launch
turtlebot_nonstop/turtlebot_nonstop_bringup/launch/includes/: _amcl.launch  _ar_tracker_bundle.launch  _ar_tracker_kinect.launch  _ar_tracker_train.launch  _hector_mapping.launch  _master_ctrl.launch  _mobile_base.launch  _mobile_base_soft.launch  _move_base.launch  _robot.launch  _robot_with_marker.launch  _zeroconf.launch  robot_with_marker.launch.xml
turtlebot_nonstop/turtlebot_nonstop_bringup/launch/includes/kobuki/: _mobile_base.launch
turtlebot_nonstop/turtlebot_nonstop_bringup/param/: zeroconf.yaml
turtlebot_nonstop/turtlebot_nonstop_description/: CMakeLists.txt  package.xml
turtlebot_nonstop/turtlebot_nonstop_description/markers/: attached_markers.urdf.xacro
turtlebot_nonstop/turtlebot_nonstop_description/meshes/markers/: marker_2.blend  marker_4.blend  marker_4.stl
turtlebot_nonstop/turtlebot_nonstop_description/robots/: kobuki_hexagons_kinect_Marker_0.urdf.xacro  kobuki_hexagons_kinect_Marker_1.urdf.xacro
turtlebot_nonstop/turtlebot_nonstop_description/urdf/: turtlebot_library.urdf.xacro  turtlebot_nonstop_standalone.urdf
turtlebot_nonstop/turtlebot_nonstop_description/urdf/marker_bundle/: attached_markers.urdf.xacro  attached_markers_0.urdf.xacro  attached_markers_1.urdf.xacro  marker_bundle_0.urdf.xacro  marker_bundle_1.urdf.xacro
turtlebot_nonstop/turtlebot_nonstop_rapps/: CMakeLists.txt  package.xml
turtlebot_nonstop/turtlebot_nonstop_softnode/: CMakeLists.txt  package.xml
turtlebot_nonstop/turtlebot_nonstop_softnode/include/turtlebot_nonstop_softnode/: fake_turtlebot_nonstop.h  fake_turtlebot_nonstop_ros.h
turtlebot_nonstop/turtlebot_nonstop_softnode/launch/: full.launch
turtlebot_nonstop/turtlebot_nonstop_softnode/plugins/: nodelet_plugins.xml
turtlebot_nonstop/turtlebot_nonstop_softnode/src/nodelet/: turtlebot_nonstop_nodelet.cpp
turtlebot_nonstop_bringup/: CMakeLists.txt  package.xml
turtlebot_nonstop_bringup/launch/: minimal.launch  minimal_with_appmanager.launch
turtlebot_nonstop_soft/turtlebot_nonstop_soft_rapps/: CMakeLists.txt  package.xml
turtlebot_nonstop_soft/turtlebot_nonstop_softapps/: CMakeLists.txt  package.xml
(+82 files in other folders)
